--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,6 +6,7 @@
 
 - link:
     ~/.zshrc: zsh/.zshrc
+    ~/.oh-my-zsh: zsh/oh-my-zsh
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
