Set up Brewfile for Homebrew

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,5 +8,7 @@
     ~/.zshrc: zsh/.zshrc
     ~/.oh-my-zsh: zsh/oh-my-zsh
 
+    ~/.Brewfile: macos/Brewfile
+
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
