Link Brewfile only if on macOS

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,7 +8,9 @@
   ~/.zshrc: zsh/.zshrc
   ~/.oh-my-zsh: zsh/oh-my-zsh
 
-    ~/.Brewfile: macos/Brewfile
+  ~/.Brewfile:
+    if: "[ `uname` = Darwin ]"
+    path: macos/Brewfile
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
