Move config files to the .config directory

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,16 +1,21 @@
 - defaults:
     link:
+      create: true
       relink: true
 
-- clean: ["~"]
+- clean: ["~", "${XDG_CONFIG_HOME}"]
 
 - link:
-    ~/.zshrc: zsh/.zshrc
-    ~/.oh-my-zsh: zsh/oh-my-zsh
+    ~/.zshenv: { path: zsh/.zshenv, force: true }
+    ${XDG_CONFIG_HOME}/zsh: zsh
+    ${XDG_CONFIG_HOME}/.oh-my-zsh: zsh/oh-my-zsh
 
-    ~/.Brewfile:
+    ${XDG_CONFIG_HOME}/.Brewfile:
       if: "[ `uname` = Darwin ]"
       path: macos/Brewfile
 
 - shell:
+    - description: Set XDG environment variables
+      command: source ./zsh/.zshenv
+
     - [git submodule update --init --recursive, Installing submodules]
