--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
 	path = dotbot
 	url = https://github.com/anishathalye/dotbot
 [submodule "zsh/oh-my-zsh"]
-	path = zsh/oh-my-zsh
+	path = oh-my-zsh
 	url = git@github.com:ohmyzsh/ohmyzsh.git
