Move .zshenv symlink to home dir
Will this prevent the history flles from auto-generating in my repo?

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -13,7 +13,7 @@
 
 - link:
     # Essential configs
-    ${XDG_CONFIG_HOME}/.zshenv: { path: zsh/.zshenv, force: true }
+    ~/.zshenv: { path: zsh/.zshenv, force: true }
     ${XDG_CONFIG_HOME}/zsh: zsh
     ${XDG_CONFIG_HOME}/.Brewfile:
       if: "[ `uname` = Darwin ]"
