--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -15,6 +15,8 @@
     # Essential configs
     ~/.zshenv: { path: zsh/.zshenv, force: true }
     ${XDG_CONFIG_HOME}/zsh: zsh
+    ${XDG_CONFIG_HOME}/tmux: tmux
+
     ${XDG_CONFIG_HOME}/.Brewfile:
       if: "[ `uname` = Darwin ]"
       path: macos/Brewfile
@@ -23,4 +25,3 @@
 
     # Utility config files
     # ${XDG_CONFIG_HOME}/git/.gitconfig: general/.gitconfig
-
