Set up utils dir

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -25,5 +25,7 @@
     # oh-my-zsh config
     ~/.oh-my-zsh: oh-my-zsh
 
-    # Utility config files
+    # Utilities
+    ${XDG_CONFIG_HOME}/utils: utils
+
     # ${XDG_CONFIG_HOME}/git/.gitconfig: general/.gitconfig
