Ensure a nerd font is installed (Meslo)

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -1,23 +1,43 @@
-# Essentials
+######################################################################
+# Essentials                                                         #
+######################################################################
 brew "git"
 brew "tmux"
 
-# Basics
+######################################################################
+# Basics                                                             #
+######################################################################
 brew "bat"
 brew "exa"
 brew "micro"
 
-# Reference
+######################################################################
+# Reference                                                          #
+######################################################################
 brew "tldr"
 
-# Monitoring and Performance
+######################################################################
+# Monitoring and Performance                                         #
+######################################################################
 brew "speedtest-cli"
 
-# CLI External Services
+######################################################################
+# CLI External Services                                              #
+######################################################################
 brew "asciinema"
 
-# CLI Fun
+######################################################################
+# CLI Fun                                                            #
+######################################################################
 brew "cmatrix"
 brew "figlet"
 brew "lolcat"
 brew "neofetch"
+
+######################################################################
+# macOS                                                              #
+######################################################################
+
+# Fonts
+tap 'homebrew/cask-fonts'
+cask 'font-meslo-lg-nerd-font'
