Add tmux plugins

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,6 +9,17 @@ set-option -g prefix C-b
 # Allow mouse support
 set -g mouse on
 
+# Use wider color pallete
+set -g default-terminal screen-256color
+
+######################################################################
+# Status Line                                                        #
+######################################################################
+
+# Let's go O's
+set -g status-bg orange
+set -g status-fg black
+
 ######################################################################
 # Navigation                                                         #
 ######################################################################
@@ -18,3 +29,23 @@ bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+
+######################################################################
+# Plugin Imports and Configurations                                  #
+######################################################################
+
+# Set install location for plugins
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "${XDG_CONFIG_HOME}/tmux/plugins"
+
+set -g @plugin 'tmux-plugins/tpm'
+
+# Install status bar plugins
+set -g @plugin 'xamut/tmux-weather'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'MunifTanjim/tmux-mode-indicator'
+set -g @plugin 'tmux-plugins/tmux-online-status'
+set -g @plugin 'kristijanhusak/tmux-simple-git-status'
+
+# Initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
+run '${XDG_CONFIG_HOME}/tmux/plugins/tpm/tpm'
