--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "dotbot"]
-	path = dotbot
+	path = lib/dotbot
 	url = https://github.com/anishathalye/dotbot
 [submodule "zsh/oh-my-zsh"]
 	path = oh-my-zsh
 	url = git@github.com:ohmyzsh/ohmyzsh.git
+[submodule "lib/tpm"]
+	path = lib/tpm
+	url = https://github.com/tmux-plugins/tpm.git
