--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -35,23 +35,23 @@ bind -n M-Down select-pane -D
 ######################################################################
 
 # Set install location for plugins
-# set-environment -g TMUX_PLUGIN_MANAGER_PATH "${XDG_CONFIG_HOME}/tmux/plugins"
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "${XDG_DATA_HOME}/tmux/plugins"
 
-# set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tpm'
 
 # Install status bar plugins
-# set -g @plugin 'xamut/tmux-weather'
-# set -g @plugin 'tmux-plugins/tmux-cpu'
-# set -g @plugin 'tmux-plugins/tmux-battery'
-# set -g @plugin 'tmux-plugins/tmux-online-status'
-# set -g @plugin 'kristijanhusak/tmux-simple-git-status'
+set -g @plugin 'xamut/tmux-weather'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-online-status'
+set -g @plugin 'kristijanhusak/tmux-simple-git-status'
 
 # Set status line content
-# set -g status-interval 2
-# set -g status-right-length 180
-# set -g status-right 'Online: #{online_status} | #{weather} | %a %d/%m/%Y %H:%M | #{battery_icon_status} #{battery_percentage}'
-# set -g status-left-length 180   
-# set -g status-left "CPU: #{cpu_fg_color}#{cpu_percentage} #{cpu_temp_icon} #{cpu_temp}#{cpu_temp_format}#[default] | MEM: #{ram_fg_color}#{ram_percentage} #[default]| #{simple_git_status}"
+set -g status-interval 2
+set -g status-right-length 180
+set -g status-right 'Online: #{online_status} | #{weather} | %a %d/%m/%Y %H:%M | #{battery_icon_status} #{battery_percentage}'
+set -g status-left-length 180   
+set -g status-left "CPU: #{cpu_fg_color}#{cpu_percentage} #{cpu_temp_icon} #{cpu_temp}#{cpu_temp_format}#[default] | MEM: #{ram_fg_color}#{ram_percentage} #[default]| #{simple_git_status}"
 
 # Initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
-# run '${XDG_CONFIG_HOME}/tmux/plugins/tpm/tpm'
+run '${XDG_DATA_HOME}/tmux/plugins/tpm/tpm'
