--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -53,5 +53,28 @@ set -g status-right 'Online: #{online_status} | #{weather} | %a %d/%m/%Y %H:%M |
 set -g status-left-length 180   
 set -g status-left "CPU: #{cpu_fg_color}#{cpu_percentage} #{cpu_temp_icon} #{cpu_temp}#{cpu_temp_format}#[default] | MEM: #{ram_fg_color}#{ram_percentage} #[default]| #{simple_git_status}"
 
+set -g @cpu_low_bg_color "#[bg=0]"
+set -g @cpu_low_fg_color "#[fg=3]"
+set -g @cpu_medium_bg_color "#[bg=0]"
+set -g @cpu_medium_fg_color "#[fg=3]"
+set -g @cpu_high_bg_color "#[bg=0]"
+set -g @cpu_high_fg_color "#[fg=1]"
+set -g @cpu_temp_format "%0.1f°"
+set -g @cpu_temp_low_icon "❄️"
+set -g @cpu_temp_medium_icon "🌡️"
+set -g @cpu_temp_high_icon "🔥"
+set -g @cpu_temp_low_bg_color "#[bg=0]"
+set -g @cpu_temp_low_fg_color "#[fg=20]"
+set -g @cpu_temp_medium_bg_color "#[bg=0]"
+set -g @cpu_temp_medium_fg_color "#[fg=11]"
+set -g @cpu_temp_high_bg_color "#[bg=0]"
+set -g @cpu_temp_high_fg_color "#[fg=9]"
+set -g @ram_low_bg_color "#[bg=0]"
+set -g @ram_low_fg_color "#[fg=2]"
+set -g @ram_medium_bg_color "#[bg=0]"
+set -g @ram_medium_fg_color "#[fg=3]"
+set -g @ram_high_bg_color "#[bg=0]"
+set -g @ram_high_fg_color "#[fg=2]"
+
 # Initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
 run '${XDG_DATA_HOME}/tmux/plugins/tpm/tpm'
