Include newsboat and zsh-autosuggestions

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -34,6 +34,7 @@ brew "cointop"
 brew "figlet"
 brew "lolcat"
 brew "neofetch"
+brew "newsboat"
 
 ######################################################################
 # macOS                                                              #
