Update tmux and MOTD weather format

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -46,6 +46,9 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'kristijanhusak/tmux-simple-git-status'
 
+# Set plugin options
+set -g @tmux-weather-units "u"
+
 # Set status line content
 set -g status-interval 2
 set -g status-right-length 180
