Replace neofetch with fastfetch

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -33,7 +33,7 @@ brew "asciinema"
 ######################################################################
 brew "cmatrix"
 brew "figlet"
-brew "neofetch"
+brew "fastfetch"
 brew "newsboat"
 
 ######################################################################
