--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,6 +14,7 @@
 - link:
     # Essential configs
     ${HOME}/.zshenv: { path: zsh/.zshenv, force: true }
+    ${HOME}/.zshrc: { path: zsh/.zshrc, force: true }
     ${XDG_CONFIG_HOME}/zsh: zsh
     ${XDG_CONFIG_HOME}/tmux: tmux
 
