Replace depricated tldr version

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -16,7 +16,7 @@ brew "zoxide"
 ######################################################################
 # Reference                                                          #
 ######################################################################
-brew "tldr"
+brew "tlrc"
 
 ######################################################################
 # Monitoring and Performance                                         #
