Add vi copy mode + tmux-yank for proper clipboard integration

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,6 +12,12 @@ set -g mouse on
 # Use wider color pallete
 set -g default-terminal screen-256color
 
+# Vi-style copy mode
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
+
 ######################################################################
 # Status Line                                                        #
 ######################################################################
@@ -38,6 +44,7 @@ bind -n M-Down select-pane -D
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "${XDG_DATA_HOME}/tmux/plugins"
 
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Install status bar plugins
 set -g @plugin 'xamut/tmux-weather'
