--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -53,9 +53,9 @@ set -g @plugin 'tmux-plugins/tmux-online-status'
 set -g @plugin 'kristijanhusak/tmux-simple-git-status'
 
 # Set status line content
-set -g status-interval 2
+set -g status-interval 30
 set -g status-right-length 180
-set -g status-right 'Online: #{online_status} | %a %d/%m/%Y %H:%M | #{battery_icon_status} #{battery_percentage}'
+set -g status-right '#(~/.config/utils/sports.sh) | Online: #{online_status} | %a %d/%m/%Y %H:%M | #{battery_icon_status} #{battery_percentage}'
 set -g status-left-length 180   
 set -g status-left "CPU: #{cpu_fg_color}#{cpu_percentage} #{cpu_temp_icon} #{cpu_temp}#{cpu_temp_format}#[default] | MEM: #{ram_fg_color}#{ram_percentage} #[default]| #{simple_git_status}"
 
