Replace speedtest-cli with fast

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -21,7 +21,7 @@ brew "tlrc"
 ######################################################################
 # Monitoring and Performance                                         #
 ######################################################################
-brew "speedtest-cli"
+brew "fast"
 
 ######################################################################
 # CLI External Services                                              #
