--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/anishathalye/dotbot
 [submodule "zsh/oh-my-zsh"]
 	path = oh-my-zsh
-	url = git@github.com:ohmyzsh/ohmyzsh.git
+	url = https://github.com/ohmyzsh/ohmyzsh.git
 [submodule "lib/tpm"]
 	path = lib/tpm
 	url = https://github.com/tmux-plugins/tpm.git
