--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -21,7 +21,7 @@ brew "tlrc"
 ######################################################################
 # Monitoring and Performance                                         #
 ######################################################################
-brew "fast"
+brew "speedtest"
 
 ######################################################################
 # CLI External Services                                              #
