Add watch to Brewfile

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -32,6 +32,7 @@ brew "asciinema"
 ######################################################################
 # CLI Fun                                                            #
 ######################################################################
+brew "watch"
 brew "cmatrix"
 brew "figlet"
 brew "fastfetch"
