--- a/wtf/config.yml
+++ b/wtf/config.yml
@@ -14,22 +14,22 @@ wtf:
       odd: white
   grid:
     columns: [50, 68, 62]
-    rows: [12, 10, 6, 5]
+    rows: [12, 12, 6, 5]
   refreshInterval: 1
   openFileUtil: "open"
   mods:
-    sports:
-      cmd: "/Users/gavin/.config/utils/sports.sh"
+    weather:
+      type: cmdrunner
+      cmd: "/Users/gavin/.config/utils/weather.sh"
       args: []
       enabled: true
-      refreshInterval: 300
-      title: "🏟 Today's Games"
-      type: cmdrunner
+      title: "⛅ Weather"
       position:
         top: 0
         left: 0
-        height: 2
+        height: 1
         width: 1
+      refreshInterval: 1800
     news:
       type: hackernews
       title: "HackerNews"
@@ -42,6 +42,18 @@ wtf:
         height: 1
         width: 2
       refreshInterval: 900
+    sports:
+      type: cmdrunner
+      cmd: "/Users/gavin/.config/utils/sports.sh"
+      args: []
+      enabled: true
+      title: "🏟 Today's Games"
+      position:
+        top: 1
+        left: 0
+        height: 1
+        width: 1
+      refreshInterval: 300
     clocks:
       type: clocks
       title: "Clocks"
@@ -83,24 +95,34 @@ wtf:
         height: 2
         width: 1
       refreshInterval: 1
+    battery:
+      type: power
+      title: "⚡️ Battery"
+      enabled: true
+      position:
+        top: 2
+        left: 1
+        height: 1
+        width: 1
+      refreshInterval: 15
     uptime:
       type: cmdrunner
       cmd: "uptime"
       args: []
       enabled: true
       position:
-        top: 2
-        left: 1
-        height: 1
-        width: 2
-      refreshInterval: 30
-    battery:
-      type: power
-      title: "⚡️ Battery"
-      enabled: true
-      position:
         top: 3
         left: 1
         height: 1
-        width: 2
-      refreshInterval: 15
+        width: 1
+      refreshInterval: 30
+    security:
+      type: security
+      title: "🔒 Security"
+      enabled: true
+      position:
+        top: 2
+        left: 2
+        height: 2
+        width: 1
+      refreshInterval: 3600
